--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Satisfying?
+		    (Click Mouse) Satisfying?
 	    </footer>
 	</body>
 </html>
